# IsAI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  SECURITY.md  prompt.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
docs/research/: claude-cli-help-2.1.183.txt  codex-exec-help-0.141.0.txt
prompts/: repair_v1.txt  reviewer_v1.txt
scripts/: generate_docx_fixtures.py
src/isai/: __init__.py  __main__.py  cli.py  config.py  doctor.py  errors.py  highlights.py  models.py  pipeline.py  prompting.py  textmatch.py  validation.py
src/isai/docxio/: __init__.py  extract.py  safety.py
src/isai/persistence/: __init__.py  db.py  render.py  report.py
src/isai/providers/: __init__.py  base.py  classify.py  claude.py  cli_adapter.py  codex.py  runner.py
src/isai/web/: __init__.py  jobs.py  security.py  server.py  state.py
src/isai/web/static/: app.css  index.js  job.js
src/isai/web/templates/: index.html  job.html
tests/: conftest.py  helpers.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_consensus.py  test_docx_safety.py  test_extraction.py  test_highlights.py  test_models.py  test_persistence.py  test_pipeline.py  test_playwright_smoke.py  test_real_providers.py  test_review_fixes.py  test_runner.py  test_textmatch.py  test_validation.py  test_web.py
tests/fake_cli/: __init__.py  __main__.py  claude_mock.py  codex_mock.py  common.py
