[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isai"
version = "0.1.0"
description = "Local Windows tool that screens .docx documents for AI-associated stylistic patterns and academic-writing quality via your existing Claude or ChatGPT subscription CLIs. Not an authorship detector."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "IsAI contributors" }]
keywords = ["docx", "academic-writing", "style-review", "claude", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "python-docx>=1.1.2",
    "pydantic>=2.9",
    "typer>=0.15",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.32",
]

[project.urls]
Homepage = "https://github.com/ghsi011/IsAI"
Issues = "https://github.com/ghsi011/IsAI/issues"

[project.scripts]
isai = "isai.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "build>=1.2",
    "twine>=6.0",
    "pip-audit>=2.7",
    "playwright>=1.49",
    "pytest-playwright>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/isai"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "isai/_prompts"

[tool.hatch.build.targets.sdist]
include = ["src/isai", "prompts", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "S",                # bandit security
    "C4",               # comprehensions
    "RUF",              # ruff-specific
    "PL",               # pylint subset
    "SIM",              # simplify
]
ignore = [
    "PLR0913",  # many-arguments: config-heavy call sites are explicit by design
    "PLR2004",  # magic values in comparisons: thresholds are documented inline
    "S101",     # assert: used by pytest
]

[tool.ruff.lint.per-file-ignores]
# textmatch's whole purpose is distinguishing lookalike Unicode variants (RUF001).
"src/isai/textmatch.py" = ["RUF001"]
"tests/**" = ["S", "PLR", "SIM117", "RUF001"]
"scripts/**" = ["S", "RUF001"]

[tool.pyright]
include = ["src", "tests", "scripts"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
addopts = "-q --strict-markers"
markers = [
    "claude_integration: real Claude CLI tests (opt-in, consumes subscription usage)",
    "codex_integration: real Codex CLI tests (opt-in, consumes subscription usage)",
    "web: web server tests",
    "e2e: mock end-to-end integration tests",
    "playwright_smoke: the single Playwright smoke test",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["isai"]
omit = [
    "src/isai/web/templates/*",
    "src/isai/web/static/*",
]

[tool.coverage.report]
show_missing = true
